add image_list
